src/test/ui/borrowck/borrowck-vec-pattern-tail-element-loan.stderr
error[E0597]: `vec` does not live long enough
  --> $DIR/borrowck-vec-pattern-tail-element-loan.rs:3:25
   |
LL |     let vec: &[isize] = &vec;
   |                         ^^^^ borrowed value does not live long enough
...
LL | }
   | -- borrow later used here
   | |
   | `vec` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
